[package]
name = "rustlings-neetcode"
description = "Solve NeetCode 250 problems in Rust, rustlings-style."
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"
repository = "https://github.com/LeoManrique/rustlings-neetcode"
keywords = ["exercise", "learning", "neetcode"]
include = [
  "/src/",
  "/exercises/",
  "/solutions/",
  # A symlink to be able to include `dev/Cargo.toml` although `dev` is excluded.
  "/dev-Cargo.toml",
  "/info.toml",
  "/README.md",
  "/LICENSE",
]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", default-features = false, features = ["windows", "events"] }
notify = "8"
rustlings-macros = { path = "rustlings-macros" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
shlex = "1"
toml = { version = "1", default-features = false, features = ["std", "parse", "serde"] }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "1.0", default-features = false, features = ["std", "stdio", "termios"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[workspace]
members = ["rustlings-macros", "exercises/*", "solutions/*"]
default-members = ["."]
exclude = ["dev", "tools", "tests/test_exercises"]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = { version = "1", default-features = false, features = ["std", "parse", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
todo = "warn"

[lints]
workspace = true
