# This file is the workspace manifest template that `rustlings-neetcode init` copies into the generated project. This first comment line is stripped during init.
[workspace]
resolver = "2"
members = [
  "exercises/*",
  "solutions/*",
]

[workspace.package]
edition = "2024"
publish = false

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[workspace.lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"
dead_code = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
empty_loop = "forbid"
infinite_loop = "deny"
mem_forget = "deny"
disallowed_methods = "allow"
