[package]
name = "rustlings-macros"
description = "Macros crate used internally by rustlings-neetcode."
version = "0.1.0"
edition.workspace = true
publish = false
include = [
  "/src/",
  "/info.toml",
]

[lib]
proc-macro = true

[dependencies]
quote = "1"
serde.workspace = true
toml.workspace = true

[lints]
workspace = true
